# caddy-in-the-middle

./: .dclintrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile
.agent/rules/: citm-utils-testing.md  core-architecture.md  development-workflow.md  documentation.md  examples-workflow.md  maintenance.md  mitmproxy-scripts.md  rule-authoring.md  runtime-configuration.md  testcontainers.md  versioning.md
.devcontainer/: compose.yml  devcontainer.json  setup-devenv.sh
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  release-tag.yml  test-and-release.yml
caddy/: Caddyfile  global-options.Caddyfile
caddy/citm.d/: citm.Caddyfile
citm-utils/: app.py  dns_forwarder.py  dnsmasq-updater.py  pyproject.toml  service_discovery.py  supervisor.html  supervisor.py  test_app.py
citm-utils/mitmproxy/: __init__.py  har.py  routes.py  test_har.py  test_routes.py
citm-utils/service_discovery/: __init__.py  discovery.py  dns_forwarder.py  test_discovery.py  test_dns_forwarder.py
citm-utils/supervisor/: __init__.py  client.py  routes.py  test_client.py  test_routes.py
dnsmasq/: dnsmasq.conf  start-dnsmasq.sh
docs/: mkdocs.yml  pyproject.toml
docs/caddy_lexer/: pyproject.toml
docs/caddy_lexer/caddy_lexer/: __init__.py
docs/src/: index.md
docs/src/explanation/: architecture.md  dns-discovery-and-forwarding.md  gateway-vs-sidecar-topologies.md  mocking-and-rewrite-pipeline.md  request-flow.md
docs/src/how-to/: author-mock-templates.md  configure-caddy.md  configure-service-discovery.md  create-dev-root-ca.md  inspect-traffic-and-export-har.md
docs/src/reference/: admin-api.md  caddy-and-mitm-routing-contract.md  default-ports.md  mock-template-format.md  network-and-port-contracts.md  runtime-configuration.md
docs/src/tutorials/: chained-apps-with-proxylens.md  gateway-and-sidecars.md  getting-started.md  http-proxy-and-dns-forwarder.md  mixed-mode-deployment.md  mocking.md
example/: .gitignore  Dockerfile  compose.yml  justfile
examples/: .gitignore
examples/chained-apps-with-proxylens/app3/: Dockerfile  app.py  compose.yml  pyproject.toml
examples/chained-apps-with-proxylens/app3/caddy-conf.d/: app3.conf
hack/: update_default_ports.py  upgrade_deps.py
mitmproxy/: justfile  mock-responder.py  pyproject.toml  rewrite-host.py  start-mitmproxy.sh
mitmproxy/mitm-scripts/: 20-mock-responder.py  90-proxylens.py  justfile  pyproject.toml
mitmproxy/mitm-scripts/mock_responder/: addon.py  parser.py  test_rendering.py  test_store.py
mitmproxy/mitm-scripts/mock_responder/fixtures/: exact_render.mako  external_fetch.mako  hot_reload.mako  wildcard_match.mako
mitmproxy/mitm-scripts/proxylens/: __init__.py  addon.py  test_addon.py
mitmproxy/mitm-scripts/rewrite_host/: addon.py  test_integration.py
proxylens/: start-proxylens-server.sh
shared-certificates/: Dockerfile  README.md  compose.yml  mk-devcerts.sh
supervisor/: start-supervisord.sh  supervisord.conf
testcontainers/: specification.md
testcontainers/python/: README.md  justfile  pyproject.toml
testcontainers/python/caddy_in_the_middle/: __init__.py  certs.py  container.py
testcontainers/python/scripts/: update_version.py
testcontainers/python/tests/: test_config.py  test_container.py
(+108 files in other folders)
