[project]
name = "caddy-in-the-middle-docs"
version = "0.1.0"
description = "Documentation for Caddy in the Middle"
requires-python = ">=3.10"
dependencies = [
    "zensical>=0.0.24",
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=0.24.0",
    "caddy-lexer",
]

[tool.uv.workspace]
members = [
    "caddy_lexer",
]

[tool.uv.sources]
caddy-lexer = { workspace = true }
