[project]
name = "caddy-in-the-middle-docs"
version = "0.1.0"
description = "Documentation for Caddy in the Middle"
requires-python = ">=3.10"
dependencies = [
    "zensical>=0.0.40",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "caddy-lexer",
]

[tool.uv.workspace]
members = [
    "caddy_lexer",
]

[tool.uv.sources]
caddy-lexer = { workspace = true }
