[project]
name = "citm-mitmproxy-scripts"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mako>=1.3.12",
    "mitmproxy>=11.0.0",
    "proxylens-mitmproxy==0.4.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mock_responder", "proxylens", "rewrite_host"]

[tool.pytest.ini_options]
testpaths = ["rewrite_host", "mock_responder", "proxylens"]
