[project]
name = "caddy-in-the-middle"
version = "0.4.8"
description = "Testcontainers module for CaddyInTheMiddle"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "testcontainers>=4.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caddy_in_the_middle"]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
]
