[project]
name = "caddy-in-the-middle"
version = "0.5.0"
description = "Testcontainers module for CaddyInTheMiddle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "testcontainers>=4.14.2",
    "cryptography>=46.0.6",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["caddy_in_the_middle"]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
]
