[project]
name = "citm-chained-apps-with-proxylens-app3"
version = "0.1.0"
description = "Flask app for the chained apps with ProxyLens example"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "opentelemetry-distro",
    "opentelemetry-instrumentation-asyncio==0.61b0",
    "opentelemetry-instrumentation-click==0.61b0",
    "opentelemetry-instrumentation-dbapi==0.61b0",
    "opentelemetry-instrumentation-flask==0.61b0",
    "opentelemetry-instrumentation-jinja2==0.61b0",
    "opentelemetry-instrumentation-logging==0.61b0",
    "opentelemetry-instrumentation-sqlite3==0.61b0",
    "opentelemetry-instrumentation-threading==0.61b0",
    "opentelemetry-instrumentation-urllib==0.61b0",
    "opentelemetry-instrumentation-wsgi==0.61b0",
]
